# Webcrawler

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  FEATURES.json  USER_GUIDE.md  build_touareg_db.py  crawl_images.py  docker-compose.yml  export_cookies.py  parse_touareg_specs.py  pyproject.toml  scrape_touareg_ads.py  task-01.md  task-02.md  task-03.md  task-04.md  task-05.md  task-06.md  touareg_explorer.py
.claude/: settings.local.json
app/: config.py  main.py
app/models/: __init__.py  batch.py  crawl.py  download.py  extraction.py  session.py  stealth.py
app/routers/: batch.py  crawl.py  download.py  profiles.py  sessions.py
app/services/: __init__.py  batch.py  captcha.py  crawl4ai.py  http_client.py  image_compliance.py  image_downloader.py  proxy.py
app/stealth/: __init__.py  assets.py  behavior.py  cloudflare.py  cookies.py  delays.py  fingerprint.py  geo.py  headers.py  javascript.py  pipeline.py  referrer.py  tls.py  (+2 more)
data/: proxies.txt
scripts/: validate-features.py
tests/: test_batch.py  test_config.py  test_crawl_images.py  test_extraction.py  test_minio_integration.py  test_models.py  test_routers.py  test_services_image_downloader.py  test_services_proxy.py  test_stealth_behavior.py  test_stealth_cloudflare.py  test_stealth_cookies.py  test_stealth_delays.py  test_stealth_fingerprint.py  test_stealth_geo.py  test_stealth_headers.py  test_stealth_javascript.py  test_stealth_pipeline.py  test_stealth_referrer.py  test_stealth_tls.py  test_stealth_user_agent.py  test_stealth_viewport.py  test_storage.py  test_validate_features.py
(+4 files in other folders)
