[project]
name = "webcrawler"
version = "0.1.0"
description = "Web crawler with stealth features, FastAPI API, and CLI"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx[socks]",
    "pydantic-settings",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
